--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cordova-plugin-calendar": "^5.1.4",
     "cordova-plugin-datepicker": "^0.9.3",
     "core-js": "^2.5.4",
+    "es-abstract": "^1.14.2",
     "firebase": "^6.6.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
