--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/calendar": "^5.13.0",
-    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/camera": "^5.17.1",
+    "@ionic-native/core": "^5.17.1",
     "@ionic-native/date-picker": "^5.13.0",
+    "@ionic-native/ionic-webview": "^5.17.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-android": "^8.0.0",
-    "cordova-browser": "^6.0.0",
+    "cordova-browser": "6.0.0",
     "cordova-plugin-calendar": "^5.1.4",
     "cordova-plugin-datepicker": "^0.9.3",
     "core-js": "^2.5.4",
@@ -81,14 +83,13 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
-      "browser",
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
