--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cordova-android": "^8.0.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-calendar": "^5.1.4",
+    "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-datepicker": "^0.9.3",
     "core-js": "^2.5.4",
     "es-abstract": "^1.14.2",
