--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "br-mask": "0.0.8",
     "cordova-android": "^8.0.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-calendar": "^5.1.4",
